# helm-charts

./: .ct.yml  .gitignore  .mise.toml  .pre-commit-config.yaml  README.md  _config.yaml  artifacthub-repo.yml  ct.yml  index.yaml  pyproject.toml
.github/: renovate.json5
.github/workflows/: lint.yml  release.yml  renovate.yml  test.yml
charts/: _templates.gotmpl
charts/gazette/: Chart.yaml  README.md  values.yaml
charts/gazette/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml
charts/genie/: Chart.yaml  README.md  values.yaml
charts/genie/templates/: common.yaml
charts/homarr/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/jdownloader2/: Chart.yaml  README.md  values.yaml
charts/metallb-config/: Chart.yaml
charts/metallb-config/templates/: _helpers.tpl  address-pool.yaml  l2-advertisement.yaml
charts/rtsp-to-hls/: Chart.yaml  README.md  values.yaml
charts/rtsp-to-hls/files/web/templates/: index.tmpl
charts/rtsp-to-hls/templates/: common.yaml  configmap.yaml
charts/scrutiny/: Chart.yaml  README.md  values.yaml
charts/skooner/: Chart.yaml  README.md  values.yaml
charts/skooner/templates/: _helpers.tpl  clusterrolebinding.yaml  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/tdarr/: Chart.yaml  README.md  values.yaml
charts/tdarr/templates/: common.yaml
charts/ubooquity/: Chart.yaml  README.md  values.yaml
charts/unmanic/: Chart.yaml  README.md  values.yaml
scripts/: bump-chart-version.sh
