[project]
name = "helm-charts"
version = "0.1.0"
description = "Helm charts"
authors = [
    { name = "Dirk Van Haerenborgh", email = "vhdirk@gmail.com" }
]
dependencies = [
    "pre-commit>=3.7.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
